Fix: improve the contrast of the pink color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
   --blue: #2e45bbbe;
   --purple: #3c2ebb;
   --green: #53e07dbd;
-  --pink-red: #f6405d;
+  --pink-red: #e23b57;
   --light-pink-red: #f8e3e7;
   --light-purple: #f1b9ff;
   --light-green-yellow: #f0ffb9;
